--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bpmn-moddle": "^7.0.5"
+    "bpmn-moddle": "^7.0.5",
+    "fs": "^0.0.1-security"
   }
 }
